--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rs-complete"
 description = "A library that handles text/word completion"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Linus Probert <linus.probert@gmail.com>"]
 edition = "2018"
 readme = "README.md"
@@ -10,7 +10,7 @@ repository = "https://github.com/liquidityc/rs-complete"
 documentation = "https://docs.rs/rs-complete"
 license = "MIT"
 keywords = ["completion", "tab-completion", "text-completion"]
-categories = ["text-input", "input", "completion"]
+categories = ["caching", "command-line-interface", "gui"]
 exclude = [".github/**"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
